/* Copyright (c) 2016 Supreeth Herle <s.herle@create-net.org >
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * This file carries the common header definition for 1st level messages.
*/

syntax = "proto2";

//
// Hello message carries : periodicity of hello message.
//
message hello {
	// One of hello messages.
	oneof hello_m {
		// Hello request message.
		hello_req req = 1;
		// Hello reply message.
		hello_repl repl = 2;
	}
}

//
// Hello message request: periodicity of hello message to set.
//
message hello_req {
	// Hello message periodicity.
	required uint32 period = 1;
}

//
// Hello message reply: carries current periodicity of hello message.
//
message hello_repl {
	// Hello message periodicity.
	required uint32 period = 1;
}
